@@ -1,4 +1,4 @@
-.TH "FAPOLICYD-CLI" "1" "January 2020" "Red Hat" "System Administration Utilities"
+.TH "FAPOLICYD-CLI" "1" "February 2020" "Red Hat" "System Administration Utilities"
 .SH NAME
 fapolicyd-cli \- Fapolicyd CLI Tool
 .SH SYNOPSIS
@@ -9,6 +9,9 @@ The fapolicyd command line utility is a tool to tell the daemon that it needs to
 .TP
 .B \-h, \-\-help
 Prints this help message.
+.TP
+.B \-l, \-\-list
+Prints a listing of the fapolicyd rules file with a rule number to aid in troubleshooting or understanding of the debug messages.
 .TP
 .B \-u, \-\-update
 Notifies fapolicyd to perform an update of the trust database.
