@@ -1,4 +1,5 @@
 0.9.3
+- In fapolicyd-cli, add a --list option to list rules
 
 0.9.2
 - Split codebase into daemon, library and cli
